<resources>
    <string name="app_name">#МаяЗямляПрыдняпроўе</string>
    <string name="choice">Выбрать</string>
    <string name="next">Далее</string>
    <string name="key">000c6204-3e9f-4a4a-9d80-e2a2e654103c</string>
    <string name="end">Завершить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_more">Подробнее</string>
    <string name="content_preview_image">previewImage</string>
    <string name="victory">Викторина</string>
    <string name="mini_map">Мини-карта</string>
    <string name="mini_map_global">Карта\nМогилёвской области</string>
    <string name="mail">mogipk@mogileviro.by</string>
    <string name="time">Пн-Пт: 08.00-17.00, обед с 13.00 до 14.00, Сб-Вс: выходной</string>
    <string name="address">212011, Могилёв, Берёзовский пер., 1А</string>
    <string name="url_site">https://www.mogileviro.by/</string>
    <string name="warning_no_internet">Пожалуйста, проверьте свое\nподключение</string>
    <string name="no_internet">Нет Интернета</string>
    <string name="no_internet_repeat">Повторить</string>
    <string name="dataV">Дата создания:</string>
    <string name="kofi">Коэффициент</string>
    <string name="fail">Тест провален</string>
    <string name="done">Тест пройден</string>
    <string name="dones">Верных результатов: </string>
    <string name="point_name">points</string>
    <string name="skip">Пропустить</string>
    <string name="welcome">Добро\nпожаловать</string>
    <string name="fragment3_text"><b>для создания положительного имиджа Могилевщины</b> на республиканском и международном уровнях</string>
    <string name="fragment2_text_pre"><b>Приложение предназначено:</b></string>
    <string name="fragment2_text"><b>для продвижения регионов</b> Могилевской области, малых и средних городов, как способ сохранения уникального социокультурного наследия Приднепровского края</string>
    <string name="play">Запуск</string>
    <string name="fragment4_text"><b>для удобного взаимодействия с достопримечательностями</b> посредством использования карты местности</string>
    <string name="fragment5_text">Приятного путешествия по местам Могилевского края</string>
    <string name="about_text">О нас</string>
    <string name="intent_to_site_text">Перейти на наш сайт</string>
    <string name="contacts_text">Связаться с нами</string>
    <string name="copy">Скопировано.</string>
    <string name="contact_peace_text">Могилёвский государственный областной институт развития образования</string>
    <string name="messageToSendHand">Email:</string>
    <string name="messageToSendFooter">Сообщение:</string>
    <string name="newMessage">Отзыв от</string>
    <string name="dialog_send_letter_title">Важно!</string>
    <string name="dialog_send_letter_text">Вы точно хотите отправить сообщение?</string>
    <string name="msg_email_sent_successfully">Сообщение успешно отправлено!</string>
    <string name="msg_error_sending_email">Что-то пошло не так...</string>
    <string name="msg_sending_email">Отправка сообщения</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="write_letter_text">Оставить комментарий</string>
    <string name="send">Отправить</string>
    <string name="adress">Почта</string>
    <string name="write_correct_email">Введите корректный адрес электронной почты!</string>
    <string name="message">Сообщение</string>
    <string name="address_name">address_name</string>
    <string name="time_job">time_job</string>
    <string name="email_address">email_address</string>
    <string name="feedback">Ответить</string>
    <string name="test_title_tesst">Соотнесите эти памятники архитектуры со стилем, в котором они построены:</string>
    <string name="item_test_common_subtitle">На знание материала всех районов</string>
    <string name="item_test_common_title">Общий тест</string>
    <string name="drag_image">drag_image</string>
    <string name="drag_load_image">drag_load_image</string>
</resources>