<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.welcomeFragments.Fragment3Fragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:src="@drawable/back2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="-70dp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/fragment2_text_pre"
            android:textColor="@color/blue_color"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:fontFamily="@font/reg"
            android:gravity="center"
            android:text="@string/fragment2_text"
            android:textColor="@color/blue_color"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:fontFamily="@font/reg"
            android:gravity="center"
            android:text="@string/fragment3_text"
            android:textColor="@color/blue_color"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:fontFamily="@font/reg"
            android:gravity="center"
            android:text="@string/fragment4_text"
            android:textColor="@color/blue_color"
            android:textSize="@dimen/_18ssp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>