<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:fillViewport="true"
    android:id="@+id/scroll"
    android:overScrollMode="never"
    android:layout_height="match_parent"
    tools:context=".views.activities.SendLetterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/filter_round"
            android:backgroundTint="@color/blue_color"
            android:contentDescription="@string/content_preview_image"
            android:padding="@dimen/_8sdp"
            android:paddingRight="4dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="218dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/write_letter_text"
            android:textColor="@color/blue_color"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <androidx.cardview.widget.CardView
            android:id="@+id/userEmailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_11sdp"
            app:cardElevation="0dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium"
                    android:hint="@string/adress"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_16ssp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/userMessageTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_11sdp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/userEmailTextInput"
            app:layout_constraintStart_toStartOf="@+id/userEmailTextInput"
            app:layout_constraintTop_toBottomOf="@id/userEmailTextInput">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userMessage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:fontFamily="@font/reg"
                    android:gravity="top"
                    android:minLines="2"
                    android:maxLines="6"
                    android:hint="@string/message"
                    android:textSize="@dimen/_16ssp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sendLetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/blue_color_disabled"
            app:cardCornerRadius="@dimen/_11sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardElevation="@null"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/userMessageTextInput">

            <TextView
                android:id="@+id/textChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_13ssp"
                android:layout_marginBottom="@dimen/_13sdp"
                android:fontFamily="@font/semibold"
                android:text="@string/send"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressbar" />

        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>